8268927: Windows: link error: unresolved external symbol "int __cdecl convert_to_unicode(char const *,wchar_t * *)"

Backport-of: e84461072af9cdb2ee83f5c0747ea5881a0ae805